# Python_web_shop

./: .gitignore  TODO.txt  docker-compose.yml  pyproject.toml  requirements.txt
web_shop/: db.sqlite3  pytest.ini
web_shop/web_shop/: settings.py  urls.py
web_shop/web_shop_main/: apps.py  models.py  permisions.py  policies.py  serializers.py  tests.py  urls.py  views.py
web_shop/web_shop_main/migrations/: 0001_initial.py  0002_product_amount_userprofile.py  0003_basket_basketitem.py  0004_userprofile_email_userprofile_first_name_and_more.py  0005_remove_userprofile_email_and_more.py  0006_delete_userprofile.py
