[tool.poetry]
name = "web-shop"
version = "0.1.0"
description = ""
authors = ["SunPower120 <112656928+SunPower120@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_shop"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
